# lepupitre

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS_2026-03-01.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  README_TECH.md  SECURITY.md  agent.md  justfile
.claude/: settings.local.json
desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/sidecar/: README.md  lepupitre-asr
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: audio.rs  coach.rs  feedback.rs  mod.rs  outline.rs  pack.rs  peer_review.rs  preferences.rs  profile.rs  project.rs  quest.rs  run.rs  security.rs  transcription.rs
desktop/src-tauri/src/core/: artifacts.rs  asr.rs  asr_live.rs  asr_models.rs  asr_sidecar.rs  coach.rs  db.rs  db_helpers.rs  feedback.rs  ids.rs  mod.rs  models.rs  outline.rs  pack.rs  peer_review.rs  preferences.rs  project.rs  quest.rs  recorder.rs  recording.rs  run.rs  seed.rs  transcript.rs  vad.rs  workspace.rs
desktop/src-tauri/src/core/coach/: mod.rs  queries.rs  repo.rs  types.rs
desktop/src-tauri/src/core/preferences/: mod.rs  repo.rs
desktop/src-tauri/src/core/run/: mod.rs  queries.rs  repo.rs  types.rs
desktop/src-tauri/src/domain/: mod.rs
desktop/src-tauri/src/domain/asr/: asr_live.rs  asr_models.rs  diagnostics.rs  downloader.rs  live_decoder.rs  mod.rs  settings.rs  transcript.rs
desktop/src-tauri/src/domain/coach/: blueprint.rs  mascot.rs  mod.rs  progress.rs  repo.rs
desktop/src-tauri/src/domain/exchange/: mod.rs  pack.rs  peer_review.rs
desktop/src-tauri/src/domain/feedback/: analysis.rs  analyze.rs  context.rs  mod.rs  notes.rs  repo.rs  timeline.rs  types.rs
desktop/src-tauri/src/domain/recorder/: dsp.rs  mod.rs  recording.rs  vad.rs
desktop/src-tauri/src/domain/run/: analyze.rs  mod.rs  reads.rs  repo.rs  writes.rs
desktop/src-tauri/src/domain/talk/: mod.rs  outline.rs  project.rs
desktop/src-tauri/src/domain/training/: quest.rs
desktop/src-tauri/src/kernel/: ids.rs  mod.rs  time.rs
desktop/src-tauri/src/platform/: artifacts.rs  asr_sidecar.rs  db.rs  mod.rs
desktop/src-tauri/tests/: asr_smoke.rs  preferences_profile_isolation.rs  quest_flow.rs  recording_pipeline.rs  run_feedback_flow.rs  workspace_flow.rs
desktop/src-tauri/tests/support/: mod.rs
(+639 files in other folders)
